Geting APIs & Keys

--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Web Page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <nav>
-            <div class="logo"><img src="Assets/FinancePro.png" alt="Logo"></div>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <h1 style="scroll-margin-top: 60px; margin-top: 150px; text-align: center;">Welcome to My Website</h1>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Crypto Trading UI</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-    <section id="home">
+    <body>
+        <header>
+            <nav>
+                <div class="logo"><img src="Assets/FinancePro.png" alt="Logo"></div>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <h1>Welcome to <bold>F</bold>inance<span>P</span>ro</h1>
+        <div class="container">
+            <div class="chart">[Chart Placeholder]</div>
+            <div class="order-book">[Order Book Placeholder]</div>
+        </div>
+        <div class="trade-panel">
+            <div class="buy">Buy BTC</div>
+            <div class="sell">Sell BTC</div>
+        </div>
+        <!-- <section id="home">
         <h2>Home</h2>
         <p>This is the home section of the website. Here you can introduce your website or provide some key information.</p>
     </section>
@@ -54,10 +62,11 @@
             
             <button type="submit">Send Message</button>
         </form>
-    </section>
+    </section> -->
+        <footer>
+            <p>&copy; 2023 My Website. All rights reserved.</p>
+        </footer>
+        <script src="index.js" defer></script>
+    </body>
 
-    <footer>
-        <p>&copy; 2023 My Website. All rights reserved.</p>
-    </footer>
-</body>
 </html>
