--- a/index.html
+++ b/index.html
@@ -13,31 +13,58 @@
             <nav>
                 <div class="logo"><img src="Assets/FinancePro.png" alt="Logo"></div>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="explore.html">Explore</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="support.html">Support</a></li>
                 </ul>
             </nav>
         </header>
         <main>
+            <!-- Hero section -->
             <section class="hero">
-                <h1>Welcome to <bold>F</bold>inance<span class="gold">P</span>ro</h1>
+                <h1>Welcome to <b>F</b>inance<span class="gold">P</span>ro</h1>
                 <div class="container">
-                    <div class="info"> New On Cripto <span class="gold">S</span>tart Now </div>
+                    <div class="info new">
+                        <p>New On Cripto</p>
+                        <span class="gold">S</span>tart Now
+                    </div>
+                    <!-- Register Form -->
                     <div class="register-holder">
+                        <h2>Join <span class="gold">U</span>s</h2>
                         <div class="register">
                             <input type="text" name="Fname" class="name" placeholder="First Name">
                             <input type="text" name="Lname" class="name" placeholder="Last Name">
                             <input type="number" name="age" placeholder="Age">
                             <input type="email" name="account" id="email" placeholder="Enter your emai">
                             <input type="password" name="password" class="password" placeholder="Create password">
-                            <input type="password" name="Comfirm Password" class="password" placeholder="Confirm password">
+                            <input type="password" name="Comfirm Password" class="password"
+                                placeholder="Confirm password">
+                            <!-- Function Button -->
                             <div class="fun-btn">
                                 <input type="submit" value="Register">
                                 <input type="reset" value="Clear">
                             </div>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section class="carosel">
+                <div class="carousel-holder">
+                    <!-- Slides -->
+                    <div class="slides">
+                        <div class="slide"><img src="image1.jpg" alt="Image 1"></div>
+                        <div class="slide"><img src="image2.jpg" alt="Image 2"></div>
+                        <div class="slide"><img src="image3.jpg" alt="Image 3"></div>
+                    </div>
+                    <!-- Navigation Buttons -->
+                    <button class="prev" onclick="moveSlide(-1)">❮</button>
+                    <button class="next" onclick="moveSlide(1)">❯</button>
+                    <!-- Indicators -->
+                    <div class="indicators">
+                        <span class="indicator" onclick="goToSlide(0)"></span>
+                        <span class="indicator" onclick="goToSlide(1)"></span>
+                        <span class="indicator" onclick="goToSlide(2)"></span>
                     </div>
                 </div>
             </section>
