Export page aded

--- a/explore.html
+++ b/explore.html
@@ -17,7 +17,6 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="explore.html">Explore</a></li>
-                    <li><a href="services.html">Services</a></li>
                     <li><a href="support.html">Support</a></li>
                 </ul>
             </nav>
@@ -42,32 +41,7 @@
                                     <th>Rating</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>Bitcoin</td>
-                                    <td>BTC</td>
-                                    <td>$30,000</td>
-                                    <td>$570B</td>
-                                    <td>⭐⭐⭐⭐⭐</td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Ethereum</td>
-                                    <td>ETH</td>
-                                    <td>$2,000</td>
-                                    <td>$230B</td>
-                                    <td>⭐⭐⭐⭐☆</td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>Binance Coin</td>
-                                    <td>BNB</td>
-                                    <td>$300</td>
-                                    <td>$50B</td>
-                                    <td>⭐⭐⭐☆☆</td>
-                                </tr>
-                            </tbody>
+                            <tbody id='tableBody'></tbody>
                         </table>
                     </div>
                 </section>
