--- a/services.html
+++ b/services.html
@@ -6,11 +6,12 @@
     <title>Our Services</title>
 </head>
 <body>
-    <section class="services-section">
+    <section class="">
         <h1>Our Services</h1>
         <div class="service">
             <h2>Service 1</h2>
             <p>Description of Service 1.</p>
+            
         </div>
         <div class="service">
             <h2>Service 2</h2>
